# smart-monkey

./: .env.example  .gitignore  LICENSE  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: ats_engine.py  editor.py  exporter.py  insights_panel.py  uploader.py
data/template_previews/: consulting.html  corporate_blue.html  executive.html  global_tech.html  korean_corporate.html  minimalist.html  modern_ats.html  startup.html
providers/: azure_foundry.py  base.py  claude.py  factory.py  gemini.py  ollama.py
scripts/: generate_template_previews.py
src/: App.css  App.tsx  config.ts  index.css
templates/html_themes/: theme_registry.py
utils/: ats_scorer.py  design_analyzer.py  image_parser.py  insights.py  models.py  pdf_parser.py  resume_builder.py  storage.py  template_previews.py  translator.py
